# monitor

./: CLAUDE.md  Cargo.toml  install.sh
data/: io.github._9je.Monitor.desktop  io.github._9je.Monitor.metainfo.xml
flatpak/: io.github._9je.Monitor.yml
src/: display.rs  identify.rs  main.rs  ui.rs
